--- a/huadian/src/assets/classifiction/classifiction.less
+++ b/huadian/src/assets/classifiction/classifiction.less
@@ -65,7 +65,7 @@
   }
 }
 .catebox-details-body {
-  padding: 0.57142857rem 0.28571429rem;
+  // padding: 0.57142857rem 0.28571429rem;
   border-radius: 0.14285714rem;
   margin-bottom: 0.85714286rem;
   box-shadow: 0px 2px 6px 0px #e9ecf0;
@@ -141,4 +141,35 @@
             }
         }
     }
+}
+.catebox-details-list-square {
+  .navigation{
+  img {
+    width: 5.14285714rem; 
+    height: 2.85714286rem;
+    border-radius: 0;
+    }
+  }
+}
+.catebox-details-pro{
+  .navigation {
+    img {
+      width: 4rem;
+      height: 4rem;
+      border-radius: 100%;
+      overflow: hidden;
+    }
+  }
+}
+.animationLeft {
+  animation:Startleft .5s;
+}
+//动画
+@keyframes Startleft {
+  0% {
+    transform:translate(200px) ;
+  }
+  100% {
+    transform:translate(0) ;
+  }
 }
