--- a/huadian/src/assets/classifiction/classifiction.less
+++ b/huadian/src/assets/classifiction/classifiction.less
@@ -185,6 +185,119 @@
 .animationLeft {
   animation:Startleft .5s;
 }
+//homedetails
+.product{
+  .product-title {
+    padding:0 2.26666667%;
+    font-size: 0;
+  }
+  .product-list {
+    padding:0 2.26666667%;
+    font-size: 0;
+  } 
+  .product-item-normal {
+    display: inline-block;
+    width: 48.04469274%;
+    margin: 0 0.97765363% 0.5rem;
+    vertical-align: top;
+    position: relative;
+  }
+}
+section.main .product-item-row ,.product-item-normal{
+  margin: 0 0.97765363% 0.5rem;
+  border-radius: 0.57142857rem;
+  overflow: hidden;
+  a{
+    .product-item-pic {
+      position: relative;
+      .product-item-tag1 {
+        position: absolute;
+        top: 0.57142857rem;
+        left: 0;
+        height: 1.42857143rem;
+        line-height: 1.42857143rem;
+        background-size: cover;
+        background-position: right center;
+        color: #ffffff;
+        font-size: 0.85714286rem;
+        font-weight: 500;
+        padding: 0 0.42857143rem;
+        background:url('../../assets/img/homedetails/m_mother_tag_bg.png') no-repeat;
+      }
+    }
+    .product-item-info {
+      position: relative;
+      padding: 0.85714286rem;
+      background: linear-gradient(90deg, #fff4f3 0%, #f7d3d1 100%);
+      .product-item-info-header {
+        .product-item-info-name {
+          font-size: 0.92857143rem;
+          font-weight: 400;
+          color: #232628;
+          line-height: 1rem;
+        }
+      }
+      .product-item-info-desc {
+        margin-top: 0.64285714rem;
+        font-size: 0.85714286rem;
+        font-weight: 600;
+        color: #EB4247;
+        max-width: 55%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
+      .product-item-info-right {
+        position: absolute;
+        bottom: 0.85714286rem;
+        right: 0.85714286rem;
+        .product-item-info-price {
+          color: #232628;
+          font-size: 1.07142857rem;
+          font-weight: 600;
+          line-height: 1.5rem;
+          vertical-align: middle;
+        }
+        .product-item-info-buy {
+          margin-left: 1.78571429rem;
+          width: 1.71428571rem;
+        }
+      }
+      .product-item-info-name {
+        font-size: 0.92857143rem;
+        line-height: 1rem;
+        font-weight: 400;
+        max-width: 100%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
+      .product-item-info-desc {
+        margin-top: 0.57142857rem;
+        font-size: 0.85714286rem;
+        font-weight: 600;
+        color: #EB4247;
+        line-height: 0.92857143rem;
+        max-width: 100%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
+      .product-item-info-footer {
+        margin-top: 0.85714286rem;
+        .product-item-info-price {
+          font-size: 1.07142857rem;
+          font-weight: 600;
+          line-height: 1.5rem;
+        }
+        .product-item-info-buy {
+          float: right;
+          width:1.71428571rem;
+        }
+      }
+    }
+  }
+}
 //动画
 @keyframes Startleft {
   0% {
